# neural-amp-modeler

./: .dccache  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  environment.yml  environment_cpu.yml  environment_gpu.yml  models.py  pyproject.toml  reamp.py  requirements-gpu.txt  requirements.txt  run_knob_conditioned_training.py  setup.py  train.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Snyk-Auto-fix.yml  Snyk-scan.yml  depenbot.yml  fix_py_depen.yml  integration-tests.yml  python-package.yml
architectures/: fc_32_32_32.json
data/: knob_dataset.json  knob_train.json  knob_val.json
docs/: requirements.txt
docs/source/: .gitignore  api.rst  conf.py  index.rst  installation.rst  model-file.rst  usage.rst
docs/source/tutorials/: calibration.rst  colab.rst  command-line.rst  full.rst  gui.rst  main.rst
environments/: environment_cpu_apple.yml  environment_gpu.yml  requirements.txt  requirements_cpu_apple.txt  requirements_gpu.txt
nam/: __init__.py  _core.py  _handshake.py  cli.py  data.py  generate_knob_data.py  load_knob_data.py  util.py
nam/_dependencies/: __init__.py
nam/_dependencies/auraloss/: __init__.py  freq.py  perceptual.py  plotting.py  time.py  utils.py
nam/models/: __init__.py  _abc.py  _activations.py  _base.py  _constants.py  _exportable.py  _from_nam.py  _names.py  _with_ir.py  activations.py  base.py  conv_net.py  core.py  exportable.py  factory.py  hyper_net.py  linear.py  losses.py  metadata.py  rcnn.py  recurrent.py  registry.py  sequential.py  wavenet.py
nam/models/parametric/: __init__.py  catnets.py  hyper_net.py  params.py
nam/models/wavenet/: __init__.py  _conv.py  _film.py  _head.py  _layer_array.py  _slimmable.py  _slimmable_conv.py  _wavenet.py  slimmable.md
nam/train/: __init__.py  _errors.py  _names.py  _version.py  align.py  cli.py  colab.py  core.py  demo.py  ema.py  full.py  gui.py  ir.py  lightning_module.py  metadata.py  tui.py
nam/train/gui/: __init__.py
nam_full_configs/data/: single_pair.json
nam_full_configs/knobs/: single_knob.json  two_knobs.json
nam_full_configs/learning/: default.json  demo.json
nam_full_configs/models/: demonet.json  lstm.json  wavenet.json  wavenet_slimmable.json
output_knob_conditioned_test/: config_data.json  config_learning.json  config_model.json  model.nam
output_knob_conditioned_test/lightning_logs/version_0/: events.out.tfevents.1750740628.MacBookAir.Dlink.29094.0
output_knob_conditioned_test/lightning_logs/version_1/: events.out.tfevents.1750740651.MacBookAir.Dlink.29387.0
output_knob_conditioned_test/lightning_logs/version_10/: events.out.tfevents.1750747127.MacBookAir.Dlink.93950.0
output_knob_conditioned_test/lightning_logs/version_11/: events.out.tfevents.1750747175.MacBookAir.Dlink.94485.0
output_knob_conditioned_test/lightning_logs/version_12/: events.out.tfevents.1750747460.MacBookAir.Dlink.97341.0
output_knob_conditioned_test/lightning_logs/version_13/: events.out.tfevents.1750747539.MacBookAir.Dlink.98187.0
output_knob_conditioned_test/lightning_logs/version_14/: events.out.tfevents.1750748214.MacBookAir.Dlink.5236.0
output_knob_conditioned_test/lightning_logs/version_15/: events.out.tfevents.1750748286.MacBookAir.Dlink.6000.0
output_knob_conditioned_test/lightning_logs/version_16/: events.out.tfevents.1750748366.MacBookAir.Dlink.6869.0
output_knob_conditioned_test/lightning_logs/version_17/: events.out.tfevents.1750748394.MacBookAir.Dlink.7228.0
output_knob_conditioned_test/lightning_logs/version_18/: events.out.tfevents.1750748464.MacBookAir.Dlink.7973.0
output_knob_conditioned_test/lightning_logs/version_19/: events.out.tfevents.1750748497.MacBookAir.Dlink.8389.0
output_knob_conditioned_test/lightning_logs/version_2/: events.out.tfevents.1750740776.MacBookAir.Dlink.30694.0
output_knob_conditioned_test/lightning_logs/version_20/: events.out.tfevents.1750749740.MacBookAir.Dlink.19484.0
output_knob_conditioned_test/lightning_logs/version_21/: events.out.tfevents.1750824971.MacBookAir.Dlink.2860.0
output_knob_conditioned_test/lightning_logs/version_22/: events.out.tfevents.1750825113.MacBookAir.Dlink.5279.0
tests/: _integration.py  _skips.py  test_generate_knob_data.py  test_graceful_shutdown.py  test_install.py  test_load_knob_data.py  test_nam_full_configs.py  test_save_checkpoint.py
tests/resources/: __init__.py
tests/test_nam/: test_cli.py  test_data.py  test_importable.py  test_util.py  test_version.py
tests/test_nam/test_models/: base.py  (+14 more)
(+33 files in other folders)
