[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-amp-modeler"
description = "Neural Amp Modeler"
authors = [
    {name = "Steven Atkinson", email = "steven@atkinson.mn"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pydantic>=2.0.0",
    "pytorch_lightning",
    "scipy",  # Required by auraloss
    "sounddevice",
    "tensorboard",
    "torch",
    # `transformers` is not required, but if you have it, it needs to be recent
    # enough so I'm adding it.
    "transformers>=4",
    "tqdm",
    "wavio>=0.0.5",
]
dynamic = ["version"]

[project.optional-dependencies]
# Optional features
transformers-compat = [
    "transformers>=4",  # Issue-294
    "numpy",  # NB: Older PyTorch versions require numpy<2
]

test = [
    "pytest",
    "pytest-mock",
    "requests",
]

dev = [
    "black",
    "flake8",
    "h5py",
    "jupyter",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "semver",
]

docs = [
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0rc1",
]

gpu = [
    "torch",
]

[project.urls]
homepage = "https://github.com/sdatkinson/"

[tool.uv.pip]
extra-index-url = [
    "https://download.pytorch.org/whl/cu121",
    "https://download.pytorch.org/whl/cu118",
    "https://download.pytorch.org/whl/cu102",
]

[project.scripts]
nam = "nam.cli:nam_gui"
nam-full = "nam.cli:nam_full"
nam-hello-world = "nam.cli:nam_hello_world"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "nam/_version.py"

[tool.setuptools]
packages = ["nam", "nam.train", "nam.train.gui", "nam.train.gui._resources", "nam.models", "nam.models._resources" ]
